# Bar-JEPA

./: .gitignore  AGENTS.md  Chart Notes.md  Dockerfile  Notes.md  README.md  format.json  generator.py  hf-jepa.py  pyproject.toml  requirements.txt  submit_leonardo.sh  submit_leonardo_arp.sh  submit_leonardo_noarp.sh  submit_viscom.sh  submit_viscom_noarp.sh  submit_viscom_simple.sh  submit_viscom_vanilla.sh
.githooks/: pre-commit
bar-gen/: format.json  generator.py  statistics.py
bar-jepa/: main.py  main_distributed.py
ijepa-encoder/: main.py  main_decoder.py  main_distributed.py  main_finetune.py
results/: eval_classic_arp_charts.csv  eval_classic_arp_charts_categories.csv  eval_classic_arp_ubpmc.csv  eval_classic_arp_ubpmc_categories.csv  eval_classic_ctt_charts.csv  eval_classic_ctt_charts_categories.csv  eval_classic_ctt_ubpmc.csv  eval_classic_ctt_ubpmc_categories.csv  eval_classic_noarp_charts.csv  eval_classic_noarp_charts_categories.csv  eval_classic_noarp_ubpmc.csv  eval_classic_noarp_ubpmc_categories.csv  eval_classic_vanilla_charts.csv  eval_classic_vanilla_charts_categories.csv  eval_classic_vanilla_ubpmc.csv  eval_classic_vanilla_ubpmc_categories.csv  eval_simple_arp_charts.csv  eval_simple_arp_charts_categories.csv  eval_simple_arp_ubpmc.csv  eval_simple_arp_ubpmc_categories.csv
scripts/: bump_pyproject_version.py  install_git_hooks.sh  run_all_evals.py  submit_leonardo_arp.sh  submit_leonardo_noarp.sh  submit_uc3.sh  submit_viscom.sh  submit_viscom_arp.sh  submit_viscom_noarp.sh  submit_viscom_simple.sh  submit_viscom_vanilla.sh
(+93 files in other folders)
